--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,7 @@ body {
   background-color: var(--gr-primary);
   padding: 2rem 0 6rem;
   justify-content: center;
+  
 }
 
 .container {
@@ -40,4 +41,27 @@ body {
   color: var(--gr-color-botao-topo);
   font-size: 16px;
   font-weight: 400;
+}
+
+.cards {
+  display: flex;
+  width: 352px;
+  height: 136px;
+  background-color: red;
+  border: 5px;
+  margin-top: -65px;
+}
+
+.cards img {
+  width: 32px;
+  height: 32px;
+}
+
+.cards__title {
+  font-size: 16px;
+  color: var(--gr-dark);
+}
+
+.cards__description {
+  color: var(--gr-dark);
 }
