--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,7 @@
   --gr-light-table: #FFFFFF;
   --gr-dark: #363f5f;
   --gr-color-botao-topo: #FFFFFF;
+  --gr-background-botao-topo: #33CC95;
 }
 
 body {
@@ -46,7 +47,6 @@ body {
 .cards-principal {
   display: flex;
   justify-content: center;
-  align-items: center;
   gap: 34px;
   min-width: 1140px;
 }
@@ -58,14 +58,16 @@ body {
   background-color: red;
   border: 5px;
   margin-top: -65px;
-}
-
-.cards img {
-  width: 32px;
-  height: 32px;
+  padding: 20px;
 }
 
 .cards__title {
   font-size: 16px;
   color: var(--gr-dark);
+}
+
+
+.cards:nth-child(3) {
+  background: var(--gr-background-botao-topo);
+  color: var(--gr-color-botao-topo);
 }
