--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,27 +56,28 @@ body {
   width: 352px;
   height: 136px;
   background-color: var(--gr-background-cards);
-  border: 5px;
+  border-radius: 5px;
   margin-top: -65px;
+  padding: 25px;
 }
 
 .cards div{
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  padding: 10px;
 }
 
 .cards p {
   color: var(--gr-dark-text-cards);
   font-size: 36px;
-  padding: 10px;
-  margin: 20px 0;
+  margin: 10px 0;
+  font-weight: 500;
 }
 
 .cards__title {
-  font-size: 20px;
+  font-size: 18px;
   color: var(--gr-dark-text-cards);
+  font-weight: 500;
 }
 
 
