fix: Acrescentando color do texto do card total

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,4 +83,5 @@ body {
 
 .cards:nth-child(3) {
   background: var(--gr-background-cards-topo-total);
+  color: var(--gr-text-cards-topo-total);
 }
