--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,14 +87,21 @@ body {
   color: var(--gr-text-cards-topo-total);
 }
 
-.products-main {
-  display: flex;
-  align-items: center;
-  /* flex-direction: row; */
-  margin: 60px;
-  font-size: 15px;
+.grid-container {
+  display: grid;
+  grid-template-columns: 3fr 3fr 3fr 3fr;
+  margin-top: 30px;
+  gap: 10px;
+  padding: 30px;
+  font-size: 16px;
+  
 }
 
-.product-title--custom {
-  margin-right: 300px;
+.grid-container > div {
+  text-align: center;
+  padding: 10px 20px;
+}
+
+.background-product {
+  background-color: var(--gr-background-products);
 }
